--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="fragment_main_text">Main</string>
     <string name="get_cat">Get cat</string>
     <string name="its_me">Это я, когда...</string>
+    <string name="no_internet_connection">Нет соединения с интернетом</string>
 </resources>
